--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -17,3 +17,10 @@
 
   100%
     transform: translateY(0px)
+
+.banner-interno__fondo
+  background-image: url("../assets/curso/portada/fondo-banner-general.png") !important
+
+
+// intro
+
