--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -24,3 +24,76 @@
 
 // intro
 
+.intro
+  &:before
+    left: 60% 
+    right: 0%
+    bottom: 28%
+
+// tema1
+
+.anexo_uno
+  display: inline-block 
+
+.img_siete
+  width: 700px
+
+.color_tabla
+  border-left-color: #4DD0E1 !important
+
+.color_subtemas
+  &:after
+    border-left-color: #4DD0E1 !important
+
+// Puntos calientes
+
+.img-infografica.color-secundario .img-infografica__item__dot
+  &:before 
+    background-color: #feca2e
+.img-infografica.color-secundario .img-infografica__item__dot
+  &:after
+    background-color: #feca2e
+
+.img-infografica.color-secundario .img-infografica__item__numero
+  color: #12263F
+
+.img-infografica__item
+    width: 3.5%
+
+// fin puntos calientes.
+
+.cuadro-derecha-7
+  background-color: #BDDCF6 !important
+  &:before
+    background-color: #E6E7E8 !important
+    left: 57%
+
+.posicion_imagen
+    position: relative;
+    left: 330%;
+
+.bloque-texto-a.texto-3
+  left: -36% !important
+
+@media screen and ( max-width: 992px )
+  .cuadro-derecha-7 .bloque-texto-a.texto-3
+    left: 2% !important
+    top: 4px
+  &:before
+    width: 100%
+    height: 50%
+    left: 0% !important
+
+  .posicion_imagen
+    position: relative;
+    left: -1%;
+    top: -43px
+
+.color-slider
+  background-color: #F4F9FD
+
+.lista-ul li
+  color:#4DD0E1
+
+.img_tres
+  width: 300px
