--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -70,7 +70,7 @@
 
 .posicion_imagen
     position: relative;
-    left: 330%;
+    left: 330%
 
 .bloque-texto-a.texto-3
   left: -36% !important
@@ -97,3 +97,78 @@
 
 .img_tres
   width: 300px
+
+.color_unodos
+  background-color: #F5FAFE !important
+
+.tamano
+  left: 12%;
+  position: relative
+  width: 80%
+
+.unotres
+  &:before
+    top: -37%
+    left: 61%
+    right: 0%
+    bottom: -4%
+
+.decor
+  text-decoration: none !important
+
+.color-tarjeta-blanca
+  background-color: #ffffff
+  border: #bcbbbb5c solid
+
+// Acordeon
+
+.acordion__accion__btn--a 
+  background-color: #FECA2E !important
+
+.tarjeta.acordeonA 
+  background-color: #BDDCF6
+
+.acordion__activo 
+  background-color: #FFF7DE !important
+
+.img400
+  width: 400px
+  
+.color-cajon
+  background-color: #FFF7E0 !important
+  &:before
+    background-color: #FECA2E !important
+
+// tema 2
+
+.color_dos_uno
+  background-color: #FFF5D8
+
+.color_dos_dos
+  background-color: #E8F3FC
+
+.linea-tiempo-d__item.row.linea-tiempo-d__item--selected // quitar selected para color inicial
+  .linea-tiempo-d__item__content.tarjeta.tarjeta--gris
+    background-color:#CADFF2
+
+.dos_uno
+  &:before
+    top: 76%;
+    left: 54%;
+    right: 0%;
+    bottom: -4%;
+
+.posicion_imagen_dos
+    position: relative;
+    left: 348%
+    width: 220px !important
+
+.color-tarjeta-dos
+  background-color: #C4E4FF
+  padding: 1.5rem
+
+.img-fin
+  width: 50px 
+
+
+
