componente para revision

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1,14 +1,19 @@
 .banner-principal-decorativo
   &-1
-    animation: float1 3.5s ease-in-out infinite alternate
+    animation: float1 1.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 56%
+    right: 79%
   &-2
-    animation: float1 2.8s ease-in-out infinite alternate
+    animation: float1 1.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
-    right: 30%
+    top: 7%
+    right: 68%
+  &-3
+    animation: float1 1.8s ease-in-out infinite alternate
+    position: absolute
+    top: 21%
+    right: 11%
 
 
 @keyframes float1
@@ -57,7 +62,7 @@
 .img-infografica.color-secundario .img-infografica__item__numero
   color: #12263F
 
-.img-infografica__item
+.img-infografica__item_tres
     width: 3.5%
 
 // fin puntos calientes.
@@ -170,5 +175,25 @@
 .img-fin
   width: 50px 
 
+//tema 3
+
+.color-tarjeta-tres
+  background-color: #FFE595
+
+.clase .img-infografica__item
+    width: 8%
+
+.clase .img-infografica.color-secundario .img-infografica__item__dot
+  &:before 
+    background-color: #ffffff
+.clase .img-infografica.color-secundario .img-infografica__item__dot
+  &:after
+    background-color: #E4E4E4
+
+.clase .img-infografica.color-secundario .img-infografica__item__numero
+  color: #12263F
+
+.color-punto-tres
+  background-color: #CEDFED !important
 
 
