Corrección de hallazgos.

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -196,4 +196,10 @@
 .color-punto-tres
   background-color: #CEDFED !important
 
+// tema 4
+
+.color-tarjeta-cuatro
+  background-color: #ffffff
+  border: #707070 solid
+
 
