--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -113,8 +113,8 @@
 
 .unotres
   &:before
-    top: -37%
-    left: 61%
+    top: 62%
+    left: 55%
     right: 0%
     bottom: -4%
 
@@ -203,3 +203,25 @@
   border: #707070 solid
 
 
+/* AB */
+.tema1-tabla1 thead tr
+  background-color: $color-acento-contenido
+.tema1-tabla1 tbody tr, .tema1-tabla1 tbody td, .tema1-tabla1 tbody th
+  vertical-align: inherit
+.tema1-tabla1 i  
+  font-size: 14px
+  color: $color-acento-contenido
+.tema1-tabla1 .lista-ul--color li
+  color: $color-sistema-texto
+
+.fondo-tarj1     
+  background-color: #FFE595
+  border-bottom-left-radius: 19px
+  border-bottom-right-radius: 19px
+  @media (min-width: $bp-min-xxl)
+    height: 260px
+  @media (min-width: $bp-min-xl) and (max-width: $bp-max-xl)  
+    height: 290px
+
+.tabs-c__tab--active span   
+  font-weight: 600
